feat: java feature - record class test